--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <h2>📦 اسکنر بارکد (PWA)</h2>
   <video id="preview" style="width: 100%; height: auto;"></video>
-  <button onclick="startScanner()">شروع اسکن</button>
+  <button onclick="startScanner()">**شروع اسکن</button>
   <textarea id="output" readonly placeholder="نتایج اسکن در اینجا نمایش داده می‌شود..."></textarea>
   <button onclick="downloadText()">⬇️ دانلود فایل متنی</button>
 
