--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <h2>📦 اسکنر بارکد (PWA)</h2>
+  <h2>📦 اسکنر بارکد (PWA**)</h2>
   <video id="preview" style="width: 100%; height: auto;"></video>
   <button onclick="startScanner()">**شروع اسکن</button>
   <textarea id="output" readonly placeholder="نتایج اسکن در اینجا نمایش داده می‌شود..."></textarea>
