--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#2d2d2d" />
-  <link rel="manifest" href="manifest.json" />
   <title>Barcode Scanner PWA</title>
   <style>
-    body { font-family: sans-serif; padding: 1em; background: #f4f4f4; }
-    textarea { width: 100%; height: 200px; margin-top: 1em; }
+    body { font-family: sans-serif; padding: 1em; background: #f4f4f4; direction: rtl; text-align: right; }
+    textarea { width: 100%; height: 200px; margin-top: 1em; direction: ltr; }
     button { margin-top: 0.5em; display: block; width: 100%; padding: 1em; font-size: 16px; }
+    video { width: 100%; height: auto; background: black; margin-top: 1em; }
   </style>
 </head>
 <body>
-  <h2>📦 اسکنر بارکد (PWA**)</h2>
-  <video id="preview" style="width: 100%; height: auto;"></video>
-  <button onclick="startScanner()">**شروع اسکن</button>
+  <h2>📦 اسکنر بارکد (PWA)</h2>
+  <button onclick="startScanner()">🎥 شروع اسکن</button>
+  <video id="preview" autoplay></video>
   <textarea id="output" readonly placeholder="نتایج اسکن در اینجا نمایش داده می‌شود..."></textarea>
   <button onclick="downloadText()">⬇️ دانلود فایل متنی</button>
 
@@ -23,17 +23,24 @@
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const output = document.getElementById('output');
-      const codeReader = new ZXing.BrowserBarcodeReader();
+      const preview = document.getElementById('preview');
+      let codeReader;
 
-      window.startScanner = async function() {
+      window.startScanner = async () => {
         try {
+          if (!codeReader) {
+            codeReader = new ZXing.BrowserBarcodeReader();
+          }
+
           const devices = await codeReader.getVideoInputDevices();
           if (devices.length === 0) {
-            alert("دوربینی پیدا نشد.");
+            alert("هیچ دوربینی پیدا نشد.");
             return;
           }
+
           const selectedDeviceId = devices[0].deviceId;
-          await codeReader.decodeFromVideoDevice(selectedDeviceId, 'preview', (result, err) => {
+
+          codeReader.decodeFromVideoDevice(selectedDeviceId, preview, (result, err) => {
             if (result) {
               const code = result.text.trim();
               if (!output.value.includes(code)) {
@@ -46,7 +53,7 @@
         }
       };
 
-      window.downloadText = function() {
+      window.downloadText = () => {
         const blob = new Blob([output.value], { type: 'text/plain' });
         const a = document.createElement('a');
         a.href = URL.createObjectURL(blob);
