--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>اسکنر بارکد</title>
+  <title>اسکنر بارکد ساده</title>
   <style>
     body { font-family: sans-serif; padding: 1em; background: #f4f4f4; direction: rtl; }
     select, textarea, button { width: 100%; margin-top: 1em; padding: 0.5em; font-size: 16px; }
@@ -12,39 +12,48 @@
   </style>
 </head>
 <body>
-  <h2>📦 اسکنر بارکد (PWA)</h2>
+  <h2>📦 اسکنر بارکد</h2>
 
-  <!-- منوی انتخاب دوربین -->
   <label for="cameraSelect">📷 انتخاب دوربین:</label>
   <select id="cameraSelect"></select>
 
   <button onclick="startScanner()">🎥 شروع اسکن</button>
   <video id="preview" autoplay></video>
-  <textarea id="output" readonly placeholder="نتایج اسکن در اینجا نمایش داده می‌شود..."></textarea>
-  <button onclick="downloadText()">⬇️ دانلود فایل متنی</button>
+  <textarea id="output" readonly placeholder="نتایج اسکن..."></textarea>
+  <button onclick="downloadText()">⬇️ دانلود فایل</button>
 
-  <!-- ZXing Script -->
   <script src="https://unpkg.com/@zxing/library@0.18.6/umd/index.min.js"></script>
   <script>
+    let codeReader;
+    const preview = document.getElementById('preview');
+    const output = document.getElementById('output');
+    const cameraSelect = document.getElementById('cameraSelect');
+
     document.addEventListener('DOMContentLoaded', async () => {
-      const output = document.getElementById('output');
-      const preview = document.getElementById('preview');
-      const cameraSelect = document.getElementById('cameraSelect');
-      let codeReader = new ZXing.BrowserBarcodeReader();
+      codeReader = new ZXing.BrowserBarcodeReader();
 
-      // 📌 گرفتن لیست دوربین‌ها
-      const devices = await codeReader.getVideoInputDevices();
-      devices.forEach((device, index) => {
-        const option = document.createElement('option');
-        option.value = device.deviceId;
-        option.text = device.label || `دوربین ${index + 1}`;
-        cameraSelect.appendChild(option);
-      });
+      try {
+        const devices = await codeReader.getVideoInputDevices();
+        devices.forEach((device, i) => {
+          const option = document.createElement('option');
+          option.value = device.deviceId;
+          option.text = device.label || `دوربین ${i + 1}`;
+          cameraSelect.appendChild(option);
+        });
+      } catch (err) {
+        alert('❌ خطا در دریافت دوربین‌ها: ' + err);
+      }
+    });
 
-      // 🎥 شروع اسکن
-      window.startScanner = () => {
-        const selectedDeviceId = cameraSelect.value;
-        codeReader.decodeFromVideoDevice(selectedDeviceId, preview, (result, err) => {
+    async function startScanner() {
+      const selectedDeviceId = cameraSelect.value;
+      if (!selectedDeviceId) {
+        alert('لطفاً دوربین را انتخاب کنید.');
+        return;
+      }
+
+      try {
+        await codeReader.decodeFromVideoDevice(selectedDeviceId, preview, (result, err) => {
           if (result) {
             const code = result.text.trim();
             if (!output.value.includes(code)) {
@@ -52,17 +61,18 @@
             }
           }
         });
-      };
+      } catch (e) {
+        alert('❌ خطا در اسکن: ' + e);
+      }
+    }
 
-      // 📁 دانلود فایل
-      window.downloadText = () => {
-        const blob = new Blob([output.value], { type: 'text/plain' });
-        const a = document.createElement('a');
-        a.href = URL.createObjectURL(blob);
-        a.download = 'barcodes.txt';
-        a.click();
-      };
-    });
+    function downloadText() {
+      const blob = new Blob([output.value], { type: 'text/plain' });
+      const a = document.createElement('a');
+      a.href = URL.createObjectURL(blob);
+      a.download = 'barcodes.txt';
+      a.click();
+    }
   </script>
 </body>
 </html>
