--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>📦 اسکنر بارکد پایدار</title>
+  <title>📦 *اسکنر بارکد پایدار</title>
   <style>
     body { font-family: sans-serif; background: #f9f9f9; padding: 1em; direction: rtl; }
     video { width: 300px; height: 200px; background: black; margin: auto; display: block; border: 3px solid #333; border-radius: 10px; }
